force-app/main/default/objects/Dynacat_Product__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <label>Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>