force-app/main/default/objects/Dynacat_Product__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <label>Background Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>