force-app/main/default/objects/Dynacat_Product__c/fields/Badge_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon_Name__c</fullName>
    <label>Badge Icon Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>