force-app/main/default/objects/Dynacat_Product__c/fields/Field_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Field_Background_Color__c</fullName>
    <label>Field Background Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>