force-app/main/default/objects/Dynacat_Product__c/fields/Field_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Field_Text_Color__c</fullName>
    <label>Field Text Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>