force-app/main/default/objects/Dynacat_Product__c/fields/Label_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Label_Text_Color__c</fullName>
    <label>Label Text Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>