force-app/main/default/objects/Dynacat_Product__c/fields/Tile_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Tile_Image_URL__c</fullName>
    <label>Tile Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>